# c00los

./: CMakeLists.txt  boot.asm  console.cpp  console.h  console_x86.asm  debug.bat  gdb.ini  halt.asm  interrupt_descriptor_table.cpp  interrupt_descriptor_table.h  interrupt_descriptor_table_x86.asm  interrupt_manager.cpp  interrupt_manager.h  interrupts.asm  interrupts.h  interrupts.inc  isr.h  isr_x86.asm  keyboard.cpp  keyboard.h  linker.ld  main.cpp  memutils.h  memutils_x86.asm  mode_x86.asm  port.asm  port.cpp  port.h  segment_descriptor_table_x86.asm  segment_desriptor_table.cpp  segment_desriptor_table.h
